added 'open in Colab' button

--- a/code/test_requirements_installation_colab.ipynb
+++ b/code/test_requirements_installation_colab.ipynb
@@ -1,33 +1,27 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "GeK1MMhdnRgY"
+      },
       "source": [
         "# Test package installation\n",
+        "\n",
         "\n",
         "| Authors | Last update |\n",
         "|:------ |:----------- |\n",
         "| Hauke Licht (https://github.com/haukelicht) | 2023-11-29 |\n",
         "\n",
-        "This notebook simply tests if all required python packages can be installed on Colab."
-      ],
-      "metadata": {
-        "id": "GeK1MMhdnRgY"
-      }
+        "This notebook simply tests if all required python packages can be installed on Colab.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/fabiennelind/Going-Cross-Lingual_Course/blob/main/code/test_requirements_installation_colab.ipynb\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
+      ]
     },
     {
       "cell_type": "code",
@@ -42,8 +36,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting numpy==1.25.0\n",
             "  Downloading numpy-1.25.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (17.6 MB)\n",
@@ -62,7 +56,6 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "application/vnd.colab-display-data+json": {
               "pip_warning": {
@@ -72,11 +65,12 @@
               }
             }
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: scipy==1.11.3 in /usr/local/lib/python3.10/dist-packages (1.11.3)\n",
             "Requirement already satisfied: numpy<1.28.0,>=1.21.6 in /usr/local/lib/python3.10/dist-packages (from scipy==1.11.3) (1.25.0)\n",
@@ -107,7 +101,6 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "application/vnd.colab-display-data+json": {
               "pip_warning": {
@@ -118,11 +111,12 @@
               }
             }
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting scikit-learn==1.3.2\n",
             "  Downloading scikit_learn-1.3.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (10.8 MB)\n",
@@ -412,7 +406,6 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "application/vnd.colab-display-data+json": {
               "pip_warning": {
@@ -422,11 +415,12 @@
               }
             }
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting deepl==1.16.1\n",
             "  Downloading deepl-1.16.1-py3-none-any.whl (34 kB)\n",
@@ -604,6 +598,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "CKGK6ewrqN8g"
+      },
       "source": [
         "## Comments\n",
         "\n",
@@ -629,10 +626,21 @@
         "```\n",
         "\n",
         "You can ignore this too or simply select \"Runtime\" > \"Restart Runtime\" in the menu bar to follow the instruction."
-      ],
-      "metadata": {
-        "id": "CKGK6ewrqN8g"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
