added advanced translation notebook

--- a/code/translation_basics.ipynb
+++ b/code/translation_basics.ipynb
@@ -445,6 +445,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**_Note:_** \n",
+    "If on Colab, you will need to place the JSON file in your Google Drive and then mount your Google Drive in Colab. See [here](https://colab.research.google.com/notebooks/io.ipynb#scrollTo=u22w3BFiOveA) for instructions.\n",
+    "\n",
+    "If you run this notebook on your local machine, you can set the environment variable 'SPATH' to the folder that contains the credentials JSON:\n",
+    "\n",
+    "```python\n",
+    "os.environ['SPATH'] = '/path/to/your/credentials_folder' # use forward slashes (\"\\\") on Windows\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -954,6 +968,26 @@
     "# read your API key\n",
     "with open(os.path.join(os.environ['SPATH'], 'deepl')) as f:\n",
     "    api_key = f.read().strip()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**_Note:_** \n",
+    "If on Colab, you will need to place the text file with your API key in your Google Drive and then mount your Google Drive in Colab. See [here](https://colab.research.google.com/notebooks/io.ipynb#scrollTo=u22w3BFiOveA) for instructions.\n",
+    "\n",
+    "If you run this notebook on your local machine, you can set the environment variable 'SPATH' to the folder that contains the credentials JSON:\n",
+    "\n",
+    "```python\n",
+    "os.environ['SPATH'] = '/path/to/your/credentials_folder' # use forward slashes (\"\\\") on Windows\n",
+    "```\n",
+    "\n",
+    "Or you can copy paste your API key into the code -- but make sure **not to share it with others**!\n",
+    "\n",
+    "```python\n",
+    "api_key = 'your_api_key'\n",
+    "```"
    ]
   },
   {
