added translation example use case script, updated transformer finetuning script, added BERTopic script

--- a/code/translation_basics.ipynb
+++ b/code/translation_basics.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,28 +1009,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# translate examples texts\n",
-    "texts = ['Hello, world!', 'This is a test.']\n",
+    "texts = ['Hello, world!', 'This is a test.', 'Miten voit tänään?']\n",
     "result = translator.translate_text(texts, target_lang='de')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<deepl.api_data.TextResult at 0x2f4edba30>,\n",
-       " <deepl.api_data.TextResult at 0x2f4edba00>]"
+       "[<deepl.api_data.TextResult at 0x1071d0820>,\n",
+       " <deepl.api_data.TextResult at 0x10685e2c0>]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
        "['detected_source_lang', 'text']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1085,23 +1085,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Hallo, Welt!', 'Dies ist ein Test.']"
+       "['Hallo, Welt!', 'Dies ist ein Test.', 'Wie geht es Ihnen heute?']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# just get text of each result\n",
-    "[r.text for r in result]"
+    "[r.text for r in result] # <== using \"list comprehension\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hallo, Welt!</td>\n",
+       "      <td>EN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dies ist ein Test.</td>\n",
+       "      <td>EN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Wie geht es Ihnen heute?</td>\n",
+       "      <td>FI</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          0   1\n",
+       "0              Hallo, Welt!  EN\n",
+       "1        Dies ist ein Test.  EN\n",
+       "2  Wie geht es Ihnen heute?  FI"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame([(r.text, r.detected_source_lang) for r in result])"
    ]
   },
   {
@@ -1120,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1129,13 +1195,14 @@
        "['Hallo, Welt!', 'Dies ist ein Test.']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# we could alos specify the source language when translating\n",
+    "texts = ['Hello, world!', 'This is a test.']\n",
     "result = translator.translate_text(texts, source_lang='en', target_lang='de')\n",
     "[r.text for r in result]"
    ]
@@ -1152,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1256,7 @@
        " 'ZH': 'Chinese'}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1305,7 @@
        " 'ZH': 'chi'}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,12 +1316,12 @@
     "    c: iso639.to_iso639_2(c.lower()) if iso639.is_valid639_1(c) else None\n",
     "    for c in src_langs.keys()\n",
     "}\n",
-    "src_langs_iso1\n"
+    "src_langs_iso1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1360,7 @@
        " 'ZH': 'Chinese (simplified)'}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1411,7 @@
        " 'ZH': 'chi'}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,16 +1446,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Characters translated: 1757\n",
-      "Remaining characters: 2498243\n",
-      "% quota used: 0.07028\n"
+      "Characters translated: 902705\n",
+      "Remaining characters: 1597295\n",
+      "% quota used: 36.108200000000004\n"
      ]
     }
    ],
@@ -1396,6 +1463,82 @@
     "print('Characters translated:', usage.character.count)\n",
     "print('Remaining characters:', usage.character.limit-usage.character.count)\n",
     "print('% quota used:', usage.character.count/usage.character.limit*100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate cost\n",
+    "\n",
+    "- baseline (only for Pro API accounts): 4.99 EUR/month\n",
+    "- 500,000 characters/month: 20.00 EUR/month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34.99"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'text': ['He', 'She', 'They'], 'lang': ['en', 'en', 'en']})\n",
+    "n_chars = df.text.apply(len).sum()\n",
+    "\n",
+    "n_chars = 1_500_000\n",
+    "((n_chars / 1_000_000)*20)+4.99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44.99"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "(math.ceil(n_chars / 1_000_000)*20)+4.99"
    ]
   },
   {
