bug fix in advanced translation code

--- a/code/translation_advanced.ipynb
+++ b/code/translation_advanced.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,15 +444,21 @@
     "            raise e\n",
     "        # but if the error was due running out of memory, ...\n",
     "        else:\n",
+    "            # get the key-value arguments\n",
+    "            args = dict(**kwargs)\n",
+    "            # drop the batch size (will be set to 1 below)\n",
+    "            if 'batch_size' in args:\n",
+    "              del args['batch_size']\n",
+    "\n",
     "            clean_memory(device)\n",
     "            res = [None] * len(texts)\n",
     "            # ... try translating each text individually\n",
     "            for i, text in enumerate(texts):\n",
     "                try:\n",
-    "                    res[i] = translation_fun(text, batch_size=1, **kwargs)\n",
-    "                except:\n",
+    "                    res[i] = translation_fun(text, batch_size=1, **args)\n",
+    "                except Exception as e:\n",
     "                    # If unable to translate a text, print a warning message\n",
-    "                    print(f'WARNING: couldn\\'t translate text \"{text}\")')\n",
+    "                    print(f'WARNING: couldn\\'t translate text \"{text[:min(30, len(text))]}\". Reason: {str(e)}')\n",
     "    return res"
    ]
   },
